# everydaycode

./: README.md
cmdlinetest/: CMakeLists.txt  cmdlinetest.cpp
servicetest/: CMakeLists.txt
wakeonlan/: CMakeLists.txt  wakeonlan.cpp
